Fixing footer spacing issue

--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
@@ -62,52 +62,52 @@
 
 
 
-#main {
-	.container {
-		padding-bottom: 40px;
-		@include media-breakpoint-up(md) {
-			padding-bottom: 60px;
-		}
-		@include media-breakpoint-up(lg) {
-			padding-bottom: 80px;
-		}
-		@include media-breakpoint-up(xl) {
-			padding-bottom: 100px;
-		}
-	}
-}
+// #main {
+// 	.container {
+// 		padding-bottom: 40px;
+// 		@include media-breakpoint-up(md) {
+// 			padding-bottom: 60px;
+// 		}
+// 		@include media-breakpoint-up(lg) {
+// 			padding-bottom: 80px;
+// 		}
+// 		@include media-breakpoint-up(xl) {
+// 			padding-bottom: 100px;
+// 		}
+// 	}
+// }
 
-#main-content,
-#main .container > .inner {
-	> .wp-block-crown-blocks-call-to-action.alignfull,
-	> .wp-block-crown-blocks-container.alignfull,
-	> .wp-block-crown-blocks-container-featured-image.alignfull,
-	> .wp-block-crown-blocks-promo.alignfull,
-	> .wp-block-crown-blocks-post-header,
-	> .wp-block-crown-blocks-resource-header,
-	> .wp-block-crown-blocks-event-header,
-	> .wp-block-crown-blocks-client-story-header,
-	> .wp-block-crown-blocks-webinar-header {
-		&:last-child {
-			margin-bottom: -40px;
-			padding-bottom: 0;
-			@include media-breakpoint-up(md) {
-				margin-bottom: -60px;
-			}
-			@include media-breakpoint-up(lg) {
-				margin-bottom: -80px;
-			}
-			@include media-breakpoint-up(xl) {
-				margin-bottom: -100px;
-			}
-			body.single-post &,
-			body.single-resource & {
-				margin-bottom: 0;
-				padding-bottom: 0;
-			}
-		}
-	}
-}
+// #main-content,
+// #main .container > .inner {
+// 	> .wp-block-crown-blocks-call-to-action.alignfull,
+// 	> .wp-block-crown-blocks-container.alignfull,
+// 	> .wp-block-crown-blocks-container-featured-image.alignfull,
+// 	> .wp-block-crown-blocks-promo.alignfull,
+// 	> .wp-block-crown-blocks-post-header,
+// 	> .wp-block-crown-blocks-resource-header,
+// 	> .wp-block-crown-blocks-event-header,
+// 	> .wp-block-crown-blocks-client-story-header,
+// 	> .wp-block-crown-blocks-webinar-header {
+// 		&:last-child {
+// 			margin-bottom: -40px;
+// 			padding-bottom: 0;
+// 			@include media-breakpoint-up(md) {
+// 				margin-bottom: -60px;
+// 			}
+// 			@include media-breakpoint-up(lg) {
+// 				margin-bottom: -80px;
+// 			}
+// 			@include media-breakpoint-up(xl) {
+// 				margin-bottom: -100px;
+// 			}
+// 			body.single-post &,
+// 			body.single-resource & {
+// 				margin-bottom: 0;
+// 				padding-bottom: 0;
+// 			}
+// 		}
+// 	}
+// }
 
 
 
